kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-jelle
  labels:
    app: webapp-jelle
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webapp-jelle
  template:  
    metadata:
      labels:
        app: webapp-jelle
    spec:
      containers:
      - name: webapp-jelle
        image: jelleterhorst/devops-security:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
        #resources:
          #limits:
         #   memory: "2048Mi" 
        #securityContext:
         # runAsNonRoot: true
      imagePullSecrets:
        - name: docker-secret
