kubernetes/Netwerkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alleen-poort-5000-toestaan
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: webapp-jelle
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 5000
